--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <!-- Asset 1: High CTR 15.6% -->
                         <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
                             <div class="screenshot-container p-4 bg-gray-700 flex items-center justify-center">
-                                <img src="uploaded:CTR 2.png-a2348678-5be9-4580-a0a9-9cc707c1bbe5" alt="Screenshot of 15.6% Impressions Click-Through Rate" class="metric-screenshot">
+                                <img src="images/CTR_2.png" alt="Screenshot of 15.6% Impressions Click-Through Rate" class="metric-screenshot">
                             </div>
                             <div class="p-4 text-center">
                                 <p class="text-base font-semibold text-blue-300">Exceptional CTR Achievement</p>
@@ -388,4 +388,5 @@
     <script async src="https://www.tiktok.com/embed.js"></script>
     
 </body>
+
 </html>
