--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <!-- Asset 1: High CTR 15.6% -->
                         <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
                             <div class="screenshot-container p-4 bg-gray-700 flex items-center justify-center">
-                                <img src="images/CTR_2.png" alt="Screenshot of 15.6% Impressions Click-Through Rate" class="metric-screenshot">
+                                <img src="images/CTR 2.png" alt="Screenshot of 15.6% Impressions Click-Through Rate" class="metric-screenshot">
                             </div>
                             <div class="p-4 text-center">
                                 <p class="text-base font-semibold text-blue-300">Exceptional CTR Achievement</p>
@@ -390,3 +390,4 @@
 </body>
 
 </html>
+
