--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <!-- Asset 2: Strong CTR 11.2% -->
                         <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
                             <div class="screenshot-container p-4 bg-gray-700 flex items-center justify-center">
-                                <img src="uploaded:CTR.png-1987fa12-97cc-46c5-bf18-d28177107a3e" alt="Screenshot of 11.2% Impressions Click-Through Rate, 43.4K Views" class="metric-screenshot">
+                                <img src="images/CTR.png" alt="Screenshot of 11.2% Impressions Click-Through Rate, 43.4K Views" class="metric-screenshot">
                             </div>
                             <div class="p-4 text-center">
                                 <p class="text-base font-semibold text-blue-300">Viral Views and High CTR</p>
@@ -390,4 +390,5 @@
 </body>
 
 </html>
+
 
