--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <!-- Asset 3: Monthly View Growth 342.7K -->
                         <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
                             <div class="screenshot-container p-4 bg-gray-700 flex items-center justify-center">
-                                <img src="uploaded:monty views.png-356b0752-41cb-476e-ba8d-92fb2b5af558" alt="Screenshot of 342.7K Views and 2.6K Watch Time in last 28 days" class="metric-screenshot">
+                                <img src="images/Channel views.png" alt="Screenshot of 342.7K Views and 2.6K Watch Time in last 28 days" class="metric-screenshot">
                             </div>
                             <div class="p-4 text-center">
                                 <p class="text-base font-semibold text-blue-300">Significant Monthly View Surge</p>
@@ -390,5 +390,6 @@
 </body>
 
 </html>
+
 
 
