--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                         <!-- Asset 4: Channel Growth 209.0K Views -->
                         <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
                             <div class="screenshot-container p-4 bg-gray-700 flex items-center justify-center">
-                                <img src="uploaded:Channel views.png-87d78dfe-d4f9-48e7-89d2-56c479a9bc75" alt="Screenshot of 5,179 Subscribers and 209.0K Views in last 28 days" class="metric-screenshot">
+                                <img src="images/Channel views.png" alt="Screenshot of 5,179 Subscribers and 209.0K Views in last 28 days" class="metric-screenshot">
                             </div>
                             <div class="p-4 text-center">
                                 <p class="text-base font-semibold text-blue-300">Channel Scale & Performance</p>
@@ -390,6 +390,7 @@
 </body>
 
 </html>
+
 
 
 
